--- a/SerialPorts/COM_Ports/MainWindow.xaml
+++ b/SerialPorts/COM_Ports/MainWindow.xaml
@@ -13,28 +13,33 @@
         <viewmodel:MainViewModel/>
     </Window.DataContext>
     <Grid Background="Azure">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="90*"/>
+            <RowDefinition Height="10*"/>
+        </Grid.RowDefinitions>
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Border Grid.Column="0" 
-                BorderBrush="Black" BorderThickness="0 0 1 0"/>
-        <Border Grid.Column="2" 
-                BorderBrush="Black" BorderThickness="1 0 0 0"/>
+
+        <Border Grid.Row="1" Grid.ColumnSpan="3"
+                BorderBrush="Black" BorderThickness="1"/>
+
         <ScrollViewer Grid.Column="0">
             <StackPanel Orientation="Vertical">
-                <TextBlock Text="Input"
+                <TextBlock Text="COM1"
                            HorizontalAlignment="Center"
                            Background="Transparent" Foreground="Black"
                            FontSize="45" FontFamily="Oswald Medium"/>
-                <TextBox Text="{Binding sendMessage, UpdateSourceTrigger=PropertyChanged}"
+                <TextBox Text="{Binding SendMessage, UpdateSourceTrigger=PropertyChanged}"
                          Margin="10"
                          Background="AliceBlue" BorderBrush="Black" BorderThickness="1"
                          FontSize="30" FontFamily="Courier new" TextWrapping="Wrap">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="TextChanged">
-                            <i:InvokeCommandAction Command="{Binding SendMessageReadyCommand}" />
+                            <i:InvokeCommandAction Command="{Binding SendDataCommand}" />
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                 </TextBox>
@@ -42,13 +47,13 @@
         </ScrollViewer>
         <ScrollViewer Grid.Column="1">
             <StackPanel Orientation="Vertical" CanVerticallyScroll="True">
-                <TextBlock Text="Output"
+                <TextBlock Text="COM2"
                        HorizontalAlignment="Center"
                        Background="Transparent" Foreground="Black"
                        FontSize="45" FontFamily="Oswald Medium"/>
                 <Border BorderBrush="Black" BorderThickness="1"
                         Margin="10">
-                    <TextBlock Text="{Binding receivedMessage}"           
+                    <TextBlock Text="{Binding ReceivedMessage}"           
                          Background="AliceBlue"
                          FontSize="30" FontFamily="Courier new" TextWrapping="Wrap">
                     </TextBlock>
@@ -57,15 +62,24 @@
         </ScrollViewer>
         <ScrollViewer Grid.Column="2">
             <StackPanel Orientation="Vertical" CanVerticallyScroll="True">
-                <TextBlock Text="Logs"
-                       HorizontalAlignment="Center"
-                       Background="Transparent" Foreground="Black"
-                       FontSize="45" FontFamily="Oswald Medium"/>
-                <TextBlock Text="{Binding logs}" 
-                       HorizontalAlignment="Left" Margin="10"
-                       Background="Transparent" Foreground="Black"
-                       FontSize="25" FontWeight="Medium" FontFamily="Oswald"/>
+                <TextBlock Text="LOGS"
+                           HorizontalAlignment="Center"
+                           Background="Transparent" Foreground="Black"
+                           FontSize="45" FontFamily="Oswald Medium"/>
+                <TextBlock Text="{Binding logs}"
+                           HorizontalAlignment="Left" Margin="10"
+                           Background="Transparent" Foreground="DimGray"
+                           FontSize="20" FontWeight="Light" FontFamily="Oswald" TextWrapping="Wrap"/>
             </StackPanel>
         </ScrollViewer>
+        <StackPanel Grid.Row="1" Grid.ColumnSpan="3"
+                    Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Content="OPEN" FontSize="30" Width="500"
+                    BorderBrush="Black" BorderThickness="1"
+                    Command="{Binding OpenButtonCommand}"/>
+            <Button Content="CLOSE" FontSize="30" Width="500"
+                    BorderBrush="Black" BorderThickness="1"
+                    Command="{Binding CloseButtonCommand}"/>
+        </StackPanel>
     </Grid>
 </Window>
