--- a/SerialPorts/COM_Ports/MainWindow.xaml
+++ b/SerialPorts/COM_Ports/MainWindow.xaml
@@ -66,7 +66,7 @@
                            HorizontalAlignment="Center"
                            Background="Transparent" Foreground="Black"
                            FontSize="45" FontFamily="Oswald Medium"/>
-                <TextBlock Text="{Binding logs}"
+                <TextBlock Text="{Binding Logs}"
                            HorizontalAlignment="Left" Margin="10"
                            Background="Transparent" Foreground="DimGray"
                            FontSize="20" FontWeight="Light" FontFamily="Oswald" TextWrapping="Wrap"/>
