--- a/SerialPorts/COM_Ports_Packages/MainWindow.xaml
+++ b/SerialPorts/COM_Ports_Packages/MainWindow.xaml
@@ -60,11 +60,13 @@
                            Background="Transparent" Foreground="Black"
                            FontSize="40" FontFamily="Oswald Medium"/>
             <Border BorderBrush="Black" BorderThickness="1"
-                        Margin="10">
-                <TextBlock Text="{Binding StuffedMessage}"
-                               Height="330" HorizontalAlignment="Left" ScrollViewer.VerticalScrollBarVisibility="Auto"
+                    Margin="10">
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
+                    <TextBlock Text="{Binding StuffedMessage}"
+                               Height="330" HorizontalAlignment="Left"
                                Background="Transparent" Foreground="DimGray"
-                               FontSize="20" FontWeight="Light" FontFamily="Oswald" TextWrapping="Wrap"/>
+                               FontSize="25" FontWeight="Light" FontFamily="Courier new" TextWrapping="Wrap"/>
+                </ScrollViewer>
             </Border>
         </StackPanel>
 
@@ -75,16 +77,18 @@
                        FontSize="40" FontFamily="Oswald Medium"/>
             <Border BorderBrush="Black" BorderThickness="1"
                     Margin="10">
-                <TextBlock Text="{Binding ReceivedMessage}" 
-                           Height="330" ScrollViewer.VerticalScrollBarVisibility="Auto"
-                           Background="AliceBlue"
-                           FontSize="30" FontFamily="Courier new" TextWrapping="Wrap">
-                </TextBlock>
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
+                    <TextBlock Text="{Binding ReceivedMessage}" 
+                               Height="330" ScrollViewer.VerticalScrollBarVisibility="Auto"
+                               Background="AliceBlue"
+                               FontSize="30" FontFamily="Courier new" TextWrapping="Wrap">
+                    </TextBlock>
+                </ScrollViewer>
             </Border>
         </StackPanel>
 
         <ScrollViewer Grid.Column="3">
-            <StackPanel Orientation="Vertical" CanVerticallyScroll="True">
+            <StackPanel Orientation="Vertical">
                 <TextBlock Text="LOGS"
                            HorizontalAlignment="Center"
                            Background="Transparent" Foreground="Black"
