Added some fixes

--- a/SerialPorts/COM_Ports_Packages/MainWindow.xaml
+++ b/SerialPorts/COM_Ports_Packages/MainWindow.xaml
@@ -87,7 +87,7 @@
             </Border>
         </StackPanel>
 
-        <ScrollViewer Grid.Column="3">
+        <ScrollViewer Grid.Column="3" VerticalScrollBarVisibility="Auto">
             <StackPanel Orientation="Vertical">
                 <TextBlock Text="LOGS"
                            HorizontalAlignment="Center"
